# AI-chat-websocket

./: README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.local.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/apps/chat/: admin.py  api.py  apps.py  config.py  consumers.py  middleware.py  models.py  routing.py  schemas.py  services.py
backend/apps/chat/ai/: client.py  tokenizer.py
backend/apps/chat/migrations/: 0001_initial.py  0002_initial.py  0003_conversation_last_summarized_at_conversation_summary_and_more.py  0004_add_database_indexes.py  0005_alter_conversation_options_alter_message_options_and_more.py  0006_alter_conversation_summary_and_more.py  0007_alter_conversation_id_alter_conversation_summary_and_more.py
backend/apps/core/: api.py  apps.py  exceptions.py  log_config.py  middleware.py  ratelimit.py  schemas.py
backend/apps/payments/: admin.py  api.py  apps.py  ecpay.py  models.py  schemas.py  services.py  views.py
backend/apps/payments/migrations/: 0001_initial.py
backend/apps/users/: admin.py  api.py  apps.py  auth.py  jwt_utils.py  models.py  schemas.py  services.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_users_email_idx.py  0003_alter_user_id.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  prod.py
backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml
backend/scripts/: check_unused_functions.py
backend/tests/: conftest.py  test_ai_client.py  test_auth.py  test_chat_services.py  test_conversations.py  test_health.py  test_middleware.py  test_payments.py  test_ratelimit.py  test_tokenizer.py  test_user_auth.py  test_websocket.py
frontend/: .gitignore  README.md  biome.json  package-lock.json  package.json
frontend/scripts/: check-unused-exports.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  conversations.ts  index.ts  messages.ts  payments.ts
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/chat/: ChatArea.tsx  ConversationItem.tsx  ConversationList.tsx  MarkdownContent.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  WelcomeScreen.tsx  index.ts
frontend/src/components/common/: EmptyState.tsx  LoadingSpinner.tsx  index.ts
frontend/src/components/layout/: AuthLayout.tsx  ChatLayout.tsx  RootLayout.tsx  index.ts
frontend/src/components/payment/: CreditBalance.tsx  OrderHistory.tsx  PackageCard.tsx  index.ts
frontend/src/components/ui/: avatar.tsx  dropdown-menu.tsx  index.ts  scroll-area.tsx  separator.tsx  textarea.tsx
frontend/src/hooks/: index.ts  useWebSocket.ts
frontend/src/hooks/queries/: index.ts  useAuth.ts  useConversations.ts  useMessages.ts  usePayments.ts
frontend/src/lib/: constants.ts  index.ts  queryClient.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx  TopUpPage.tsx  index.ts
frontend/src/routes/: index.tsx
frontend/src/schemas/: auth.ts  message.ts
frontend/src/stores/: authStore.ts  chatStore.ts  index.ts  websocketStore.ts
frontend/src/types/: api.ts  auth.ts  conversation.ts  index.ts  message.ts  payment.ts  websocket.ts
